--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>862046507104-s25bdfrvedqkbfenonu9lel5nbg0mj2n.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.862046507104-s25bdfrvedqkbfenonu9lel5nbg0mj2n</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>862046507104-bcraenjisd81rcjm8khlreab9gadf1aa.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBTYhGDRGRbqmiRP48OF2CPYZoePLqjxYU</string>
 	<key>GCM_SENDER_ID</key>
