--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   firebase_core: ^3.9.0
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.9
+  google_sign_in: ^6.2.2
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.0
+  provider: ^6.1.2
+
+  
 
   flutter:
     sdk: flutter
@@ -48,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  dart_code_metrics: 5.7.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
