--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,24 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>862046507104-s25bdfrvedqkbfenonu9lel5nbg0mj2n.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.862046507104-s25bdfrvedqkbfenonu9lel5nbg0mj2n</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>862046507104-bcraenjisd81rcjm8khlreab9gadf1aa.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBTYhGDRGRbqmiRP48OF2CPYZoePLqjxYU</string>
+	<string>AIzaSyCLh4Bkc-qTY8q1YrhIS-Rar5YGr_Kw_WU</string>
 	<key>GCM_SENDER_ID</key>
-	<string>862046507104</string>
+	<string>623204910695</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.travelApp</string>
 	<key>PROJECT_ID</key>
-	<string>mychatapplication-568cd</string>
+	<string>foodshop-c3341</string>
 	<key>STORAGE_BUCKET</key>
-	<string>mychatapplication-568cd.firebasestorage.app</string>
+	<string>foodshop-c3341.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,8 +25,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:862046507104:ios:498d3ad10006cbb9eaf305</string>
+	<string>1:623204910695:ios:479e3bdb8cb7cb8393f6c2</string>
 	<key>DATABASE_URL</key>
-	<string>https://mychatapplication-568cd-default-rtdb.firebaseio.com</string>
+	<string>https://foodshop-c3341-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
