--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   provider: ^6.1.2
   image_picker: ^1.1.2
   firebase_storage: ^12.3.7
+  cached_network_image: ^3.3.1
+  path_provider: ^2.1.5
 
   
 
@@ -56,7 +58,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  dart_code_metrics: 5.7.4
+  dart_code_metrics: ^5.7.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
