--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_storage: ^12.3.7
   cached_network_image: ^3.3.1
   path_provider: ^2.1.5
+  flutter_imagekit: ^0.0.5
 
   
 
