--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.3.1
   path_provider: ^2.1.5
   flutter_imagekit: ^0.0.5
+  flutter_staggered_grid_view: ^0.7.0
 
   
 
@@ -48,6 +49,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
 
 dev_dependencies:
   flutter_test:
